# stm32f0xx-hal

./: Cargo.toml  README.md
src/: analog.rs  analog_hal.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  timer.rs
